unpackaged/main/default/objects/Campaign__c/Campaign__c.object-meta.xml
<CustomObject>
    <description>Campaign records for all Marketing Plans.</description>
    <label>Campaign</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>