unpackaged/main/default/objects/Campaign__c/fields/ActualCampaignSpend__c.field-meta.xml
<CustomField>
    <fullName>ActualCampaignSpend__c</fullName>
    <description>Sum of Actual spend sent from SAP.</description>
    <inlineHelpText>Sum of Actual Spend sent from SAP.</inlineHelpText>
    <label>Actual Campaign Spend</label>
    <summarizedField>Campaign_Spend__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Campaign_Spend__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Actual_AUS, Actual</value>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Spend__c.ParentCampaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>