unpackaged/main/default/objects/Campaign__c/fields/August_Budget__c.field-meta.xml
<CustomField>
    <fullName>August_Budget__c</fullName>
    <label>August Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>