unpackaged/main/default/objects/Campaign__c/fields/Balance_Budget_vs_Campaign_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Balance_Budget_vs_Campaign_Forecast__c</fullName>
    <description>Campaign Budget - (Actual Campaign Spend + Committed Campaign Spend)</description>
    <formula>PlannedCampaignSpend__c -  ( ActualCampaignSpend__c +  CommittedCampaignSpend__c )</formula>
    <inlineHelpText>Campaign Budget - (Actual Campaign Spend + Committed Campaign Spend)</inlineHelpText>
    <label>Balance (Budget vs Actual + Committed)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>