unpackaged/main/default/objects/Campaign__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Brand inherited from parent Marketing Plan.</description>
    <formula>ParentMarketingPlan__r.Brand__r.Name</formula>
    <label>Brand</label>
    <type>Text</type>
</CustomField>