unpackaged/main/default/objects/Campaign__c/fields/Brand_Quality__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quality__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Brand Quality</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tags__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Brand Quality</value>
        </filterItems>
        <filterItems>
            <field>Tags__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tags__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>