unpackaged/main/default/objects/Campaign__c/fields/Campaign_Balance_USD__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Balance_USD__c</fullName>
    <formula>CampaignBalance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Balance (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>