unpackaged/main/default/objects/Campaign__c/fields/Campaign_Planning_Budget__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Planning_Budget__c</fullName>
    <description>Sum of Campaign planning Amount.</description>
    <inlineHelpText>Sum of Campaign planning Amount.</inlineHelpText>
    <label>Campaign Forecast (Plan)</label>
    <summarizedField>Campaign_Spend__c.Full_Year_Budget__c</summarizedField>
    <summaryFilterItems>
        <field>Campaign_Spend__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Campaign Planning &amp; Forecasting</value>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Spend__c.ParentCampaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>