unpackaged/main/default/objects/Campaign__c/fields/CampaignBrand__c.field-meta.xml
<CustomField>
    <fullName>CampaignBrand__c</fullName>
    <label>Campaign Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>100 Anos</fullName>
            </value>
            <value>
                <fullName>2 Gingers</fullName>
            </value>
            <value>
                <fullName>Alberta Premium</fullName>
            </value>
            <value>
                <fullName>Alberta Pure</fullName>
            </value>
            <value>
                <fullName>Alberta Rye</fullName>
            </value>
            <value>
                <fullName>Alberta Springs</fullName>
            </value>
            <value>
                <fullName>Ardmore</fullName>
            </value>
            <value>
                <fullName>Auchentoshan</fullName>
            </value>
            <value>
                <fullName>Banff Ice</fullName>
            </value>
            <value>
                <fullName>Basil Hayden</fullName>
            </value>
            <value>
                <fullName>Bowmore</fullName>
            </value>
            <value>
                <fullName>Bruxo</fullName>
            </value>
            <value>
                <fullName>Calico Jack</fullName>
            </value>
            <value>
                <fullName>Canadian Club</fullName>
            </value>
            <value>
                <fullName>Cien Anos</fullName>
            </value>
            <value>
                <fullName>Cien Anos RTD</fullName>
            </value>
            <value>
                <fullName>Cooleys</fullName>
            </value>
            <value>
                <fullName>Courvoisier</fullName>
            </value>
            <value>
                <fullName>Cruzan</fullName>
            </value>
            <value>
                <fullName>DeKuyper</fullName>
            </value>
            <value>
                <fullName>Effen</fullName>
            </value>
            <value>
                <fullName>El Tesoro</fullName>
            </value>
            <value>
                <fullName>Fundador</fullName>
            </value>
            <value>
                <fullName>Glengarioch</fullName>
            </value>
            <value>
                <fullName>Glen Garioch</fullName>
            </value>
            <value>
                <fullName>Hacienda</fullName>
            </value>
            <value>
                <fullName>Haku</fullName>
            </value>
            <value>
                <fullName>Hibiki</fullName>
            </value>
            <value>
                <fullName>Hornitos</fullName>
            </value>
            <value>
                <fullName>Irish Whiskeys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>