unpackaged/main/default/objects/Campaign__c/fields/CampaignStatus__c.field-meta.xml
<CustomField>
    <fullName>CampaignStatus__c</fullName>
    <description>Field used to view the current status of the Campaign.</description>
    <inlineHelpText>Field used to view the current status of the Campaign.</inlineHelpText>
    <label>Campaign Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>