unpackaged/main/default/objects/Campaign__c/fields/Code_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Code_Created_Date__c</fullName>
    <label>Code Created Date</label>
    <type>Date</type>
</CustomField>