unpackaged/main/default/objects/Campaign__c/fields/Customer_Marketing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Marketing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Marketing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>