unpackaged/main/default/objects/Campaign__c/fields/December_Budget__c.field-meta.xml
<CustomField>
    <fullName>December_Budget__c</fullName>
    <label>December Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>