unpackaged/main/default/objects/Campaign__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description of Campaign.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>