unpackaged/main/default/objects/Campaign__c/fields/Division_program__c.field-meta.xml
<CustomField>
    <fullName>Division_program__c</fullName>
    <formula>text ( ParentMarketingPlan__r.ParentMarketingPlan__r.Division__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division Program</label>
    <type>Text</type>
</CustomField>