unpackaged/main/default/objects/Campaign__c/fields/February_Budget__c.field-meta.xml
<CustomField>
    <fullName>February_Budget__c</fullName>
    <label>February Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>