unpackaged/main/default/objects/Campaign__c/fields/ForecastedCampaignSpend__c.field-meta.xml
<CustomField>
    <fullName>ForecastedCampaignSpend__c</fullName>
    <description>Sum of Forecasted Amount.</description>
    <inlineHelpText>Sum of Forecasted Amount.</inlineHelpText>
    <label>Forecasted Campaign Budget</label>
    <summarizedField>Campaign_Spend__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Campaign_Spend__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Forecast</value>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Spend__c.ParentCampaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>