unpackaged/main/default/objects/Campaign__c/fields/Full_Year_Budget__c.field-meta.xml
<CustomField>
    <fullName>Full_Year_Budget__c</fullName>
    <formula>January_Budget__c  +  February_Budget__c  +  March_Budget__c +  April_Budget__c  +   May_Budget__c  + June_Budget__c  +  July_Budget__c  +  August_Budget__c  +  September_Budget__c  +  October_Budget__c  +  November_Budget__c  +  December_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Year Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>