unpackaged/main/default/objects/Campaign__c/fields/GL_Touchpoint__c.field-meta.xml
<CustomField>
    <fullName>GL_Touchpoint__c</fullName>
    <label>Touchpoint</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>GLCode__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Non-Premise</fullName>
            </value>
            <value>
                <fullName>Non-Working</fullName>
            </value>
            <value>
                <fullName>Off-Trade</fullName>
            </value>
            <value>
                <fullName>On-Trade</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>